--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -65,6 +65,9 @@
     "from numpy import nan\n",
     "from datetime import datetime, timedelta\n",
     "from time import mktime\n",
+    "import datetime\n",
+    "import time\n",
+    "import requests\n",
     "import os.path\n",
     "pd.set_option('display.max_columns', 500)"
    ]
@@ -451,133 +454,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "test_df = save_or_load_from_checkpoint('./checkpoints/data_3.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df = test_df.fillna('nan')\n",
-    "test_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[df[\"Signal Value string\"] == 'Floor Warming']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # can ignore Temperature, Get Information, \"Leave\" Event,\"Return\" Event,\"Sleep\" Event,\"Wake Weekend\" Event,\n",
-    "# # \"Wake\" Event, \"Weekend Wake\" Event, Fan, Auto Deadband, \n",
-    "\n",
-    "# # ignore 2 deg temp as it's from Auto Deadband\n",
-    "\n",
-    "# sorted(df[\"Signal Value string\"].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def is_locked(row):\n",
-    "    if str(row['Signal Value string']) == 'Lock':\n",
-    "        return 1\n",
-    "    elif str(row['Signal Value string']) == 'Unlock':\n",
-    "        return 0\n",
-    "    else:\n",
-    "        return 'nan'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['binary'] = df.apply(is_locked, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def is_binary(row, *args):\n",
-    "    if str(row['Signal Value string']) == args[0]:\n",
-    "        if str(row['Signal direction']) == args[1]:\n",
-    "            return 1\n",
-    "        elif str(row['Signal direction']) == args[2]:\n",
-    "            return 0\n",
-    "    elif str(row['binary']) != 'nan':\n",
-    "        return str(row['binary'])\n",
-    "    else:\n",
-    "        return 'nan'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['binary'] = df.apply(is_binary, args = ['Active Fan Level', 'High', 'Off'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[df['binary'] != 'nan']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.fillna('nan')\n",
-    "df = save_or_load_from_checkpoint('./checkpoints/data_3.h5')  "
+    "### Normalize values for binary and regression event types"
    ]
   },
   {
@@ -588,61 +468,85 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add week, day, month, hour"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.dtypes"
+    "def add_dates(data_frame):\n",
+    "    date = pd.to_datetime(data_frame['unix_time'], unit='s')\n",
+    "    data_frame['week'] = date.dt.week\n",
+    "    data_frame['day'] = date.dt.day\n",
+    "    data_frame['month'] = date.dt.month\n",
+    "    data_frame['hour'] = date.dt.hour\n",
+    "    data_frame['minute'] = date.dt.minute\n",
+    "    data_frame['second'] = date.dt.second\n",
+    "    return data_frame\n",
+    "\n",
+    "df = add_dates(df)\n",
+    "df = df.drop('unix_time', axis=1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Add week, day, month, hour"
+    "### Add temperature, sunrise/sunset data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def addDates():\n",
-    "    date = pd.to_datetime(df['unix_time'], unit='s')\n",
-    "    df['week'] = date.dt.week\n",
-    "    df['day'] = date.dt.day\n",
-    "    df['month'] = date.dt.month\n",
-    "    df['hour'] = date.dt.hour\n",
-    "    df['second'] = date.dt.second"
+    "base_http = 'https://api.darksky.net/forecast/a6861bbd8dfb09d9f06714ba8485934f/39.833851,-74.871826,'\n",
+    "temp_time_dict = {}\n",
+    "\n",
+    "def create_weather_sunset_columns(row):\n",
+    "    #hard-coded year for now. \n",
+    "    date_obj = datetime.date(2017, row['month'], row['day'])\n",
+    "    #format for API\n",
+    "    current_timestamp = int(time.mktime(date_obj.timetuple())) + 4 * 60 * 60\n",
+    "\n",
+    "    if not current_timestamp in temp_time_dict.keys():\n",
+    "        r = requests.get(base_http + str(current_timestamp))\n",
+    "        temp_json = r.json()\n",
+    "        temp_time_dict[current_timestamp] = temp_json\n",
+    "\n",
+    "    temperature_info = temp_time_dict[current_timestamp]['hourly']['data'][row['hour']]['temperature']\n",
+    "\n",
+    "    sunrise = temp_time_dict[current_timestamp]['daily']['data'][0]['sunriseTime'] #in GMT \n",
+    "    sunset = temp_time_dict[current_timestamp]['daily']['data'][0]['sunsetTime']\n",
+    "    current_timestamp_with_seconds = current_timestamp + (row['hour'] * 60 * 60) + (row['minute'] * 60)\n",
+    "\n",
+    "    is_sun_up = 1 if sunrise <= current_timestamp_with_seconds <= sunset else 0\n",
+    "    return is_sun_up, temperature_info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop('unix_time', axis=1)"
+    "df['sun'], df['outside_temperature'] = zip(*df.apply(create_weather_sunset_columns, axis=1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop('secondd', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
+    "df = save_or_load_from_checkpoint('./checkpoints/data_4.h5')  "
    ]
   },
   {
@@ -653,7 +557,7 @@
    "source": [
     "### Encode Columns\n",
     "\n",
-    "Convert Categorical to Numerical Data. "
+    "Convert Categorical to Numerical Data. \n"
    ]
   },
   {
@@ -677,7 +581,14 @@
     "    return data_frame, label_encoders\n",
     "\n",
     "categorical_df = df.copy()\n",
-    "# categorical_df, label_encoders = encode_columns(categorical_df, columns_to_update)"
+    "categorical_df, label_encoders = encode_columns(categorical_df, columns_to_update)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### One-hot encode columns\n"
    ]
   },
   {
