--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -37,22 +37,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# FOR DATA ANALYSIS PUT HOUR, DAY, WEEK, MONTH, DATE, WEATHER, SUNRISE/SUNUP"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:22:42.585668Z",
+     "start_time": "2018-06-08T20:22:41.859374Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda/envs/py35/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/Users/armanrahman/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     }
@@ -64,8 +60,8 @@
     "import h5py\n",
     "from numpy import nan\n",
     "from datetime import datetime, timedelta\n",
+    "from fractions import Fraction\n",
     "from time import mktime\n",
-    "import datetime\n",
     "import time\n",
     "import requests\n",
     "import os.path\n",
@@ -74,8 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:22:42.594902Z",
+     "start_time": "2018-06-08T20:22:42.588249Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def save_or_load_from_checkpoint(checkpoint_name):\n",
@@ -87,8 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:22:43.545092Z",
+     "start_time": "2018-06-08T20:22:43.344191Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "labels = ['LogLevel',\n",
@@ -202,8 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:23:00.578019Z",
+     "start_time": "2018-06-08T20:22:45.059544Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = from_bac()"
@@ -218,8 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:23:00.586871Z",
+     "start_time": "2018-06-08T20:23:00.580257Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def to_datetime(row):\n",
@@ -232,8 +252,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:23:58.951447Z",
+     "start_time": "2018-06-08T20:23:00.590325Z"
+    }
+   },
    "outputs": [],
    "source": [
     "df['unix_time'] = df.apply(to_datetime, axis=1)\n",
@@ -249,8 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:24:02.816549Z",
+     "start_time": "2018-06-08T20:23:58.954004Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Useless columns\n",
@@ -278,8 +309,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:24:06.662246Z",
+     "start_time": "2018-06-08T20:24:02.819377Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = df[df['eventType'] != 'ButtonChangedEvent']\n",
@@ -299,62 +336,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def merge_columns(row, *args):\n",
-    "    count = sum(1 for column_name in args if pd.notna(row[column_name]))\n",
-    "    # checks if more than one value in the merged rows\n",
-    "    assert count < 2\n",
-    "    for column_name in args:\n",
-    "        if pd.notna(row[column_name]):\n",
-    "            return row[column_name]\n",
-    "    return np.nan"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:30:18.212363Z",
+     "start_time": "2018-06-08T20:30:15.653329Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Merge room names\n",
-    "df['room_name_merged'] = df.apply(merge_columns, args=(\"roomName1\",\"roomName4\",\"roomName6\"), axis=1)\n",
+    "df['room_name_merged'] = df['roomName1'].fillna('') + df['roomName4'].fillna('') + df['roomName6'].fillna('')\n",
     "df = df.drop([\"roomName1\",\"roomName4\",\"roomName6\"], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:30:20.351864Z",
+     "start_time": "2018-06-08T20:30:18.216275Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Merge device name\n",
-    "df['device_name'] = df.apply(merge_columns, args=(\"loadName\", \"name\", \"Device Name1\", \"Device Name2\"), axis=1)\n",
+    "df['device_name'] = df['loadName'].fillna('') + df['name'].fillna('') + df['Device Name1'].fillna('') + df['Device Name2'].fillna('')\n",
     "df = df.drop([\"loadName\", \"name\", \"Device Name1\", \"Device Name2\"], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:30:22.243510Z",
+     "start_time": "2018-06-08T20:30:20.354830Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Merge IDs \n",
-    "df['device_id'] = df.apply(merge_columns, args=('load ID', 'ID', 'device ID2', 'device ID3'), axis=1)\n",
+    "df['device_id'] = df['load ID'].fillna('') + df['ID'].fillna('') + df['device ID2'].fillna('') + df['device ID3'].fillna('')\n",
     "df = df.drop(['load ID', 'ID', 'device ID2', 'device ID3'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:30:23.600670Z",
+     "start_time": "2018-06-08T20:30:22.247009Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Merge messages \n",
-    "df['message_merged'] = df.apply(merge_columns, args=(\"message1\", \"message2\"), axis=1)\n",
+    "df['message_merged'] = df['message1'].fillna('') + df['message2'].fillna('')\n",
     "df = df.drop([\"message1\", \"message2\"], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:30:25.412362Z",
+     "start_time": "2018-06-08T20:30:23.603498Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = df.replace('', np.NaN)"
    ]
   },
   {
@@ -366,18 +424,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:30:32.390998Z",
+     "start_time": "2018-06-08T20:30:31.976083Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['device_id_name'] = df['device_id'].astype(str) + df['device_name'].astype(str)\n",
-    "df = df.drop([\"device_id\", \"device_name\"], axis=1)"
+    "# df = df.drop([\"device_id\", \"device_name\"], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:30:36.931414Z",
+     "start_time": "2018-06-08T20:30:33.580647Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = df.drop_duplicates()"
@@ -385,21 +455,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.fillna('nan')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:31:46.539007Z",
+     "start_time": "2018-06-08T20:30:43.516452Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Checkpoint \n",
-    "df = save_or_load_from_checkpoint('./checkpoints/data_1.h5')  "
+    "df = save_or_load_from_checkpoint('./checkpoints/data_0.h5')  "
    ]
   },
   {
@@ -411,11 +478,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:31:47.381761Z",
+     "start_time": "2018-06-08T20:31:46.541172Z"
+    },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/armanrahman/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "# dropping more useless data\n",
     "index_to_drop = df.loc[df[\"entryType\"] == \"Auxiliary\"][df['eventType'] == \"SignalChangedEventWithStrings\"].index.tolist()\n",
@@ -424,33 +504,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:32:29.145887Z",
+     "start_time": "2018-06-08T20:32:29.138722Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "for index, row in df.iterrows():\n",
+    "def get_setpoints(row):\n",
     "    signal_direction = str(row['Signal direction'])\n",
+    "    temp = np.nan\n",
     "    if 'Fahrenheit' in signal_direction and signal_direction[0].isdigit():\n",
     "        temp = int(''.join(x for x in signal_direction if x.isdigit()))\n",
-    "        df.at[index, 'temperature'] = temp\n",
-    "        \n",
-    "    if len(signal_direction) > 20:\n",
-    "        heat_cool_auto = signal_direction.split(',')\n",
-    "        heat_temp = [int(s[:-1]) for s in heat_cool_auto[0].split() if s[0].isdigit()]\n",
-    "        cool_temp = [int(s[:-1]) for s in heat_cool_auto[1].split() if s[0].isdigit()]\n",
-    "        auto_temp = [int(s[:-1]) for s in heat_cool_auto[2].split() if s[0].isdigit()]\n",
-    "        df.at[index, 'heat_setpoint'] = heat_temp[0]\n",
-    "        df.at[index, 'cool_setpoint'] = cool_temp[0]\n",
-    "        df.at[index, 'auto_setpoint'] = auto_temp[0]"
+    "    return temp\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-08T20:32:40.935792Z",
+     "start_time": "2018-06-08T20:32:30.423080Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df['temperature'] = df.apply(get_setpoints, axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2018-06-08T20:32:54.111Z"
+    },
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "df = save_or_load_from_checkpoint('./checkpoints/data_2.h5')  "
+    "df = save_or_load_from_checkpoint('./checkpoints/data_1.h5')  "
    ]
   },
   {
@@ -463,7 +561,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -476,8 +576,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def add_dates(data_frame):\n",
@@ -503,8 +605,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "base_http = 'https://api.darksky.net/forecast/a6861bbd8dfb09d9f06714ba8485934f/39.833851,-74.871826,'\n",
@@ -533,8 +637,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['sun'], df['outside_temperature'] = zip(*df.apply(create_weather_sunset_columns, axis=1))"
@@ -542,8 +648,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = save_or_load_from_checkpoint('./checkpoints/data_4.h5')  "
@@ -563,7 +671,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn import preprocessing\n",
@@ -594,7 +704,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -615,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
