--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -1390,7 +1390,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "temp_time_dict = {}\n",
+    "\n",
+    "    if not current_timestamp in temp_time_dict.keys():\n",
+    "        r = requests.get(base_http + str(current_timestamp))\n",
+    "        temp_json = r.json()\n",
+    "        temp_time_dict[current_timestamp] = temp_json"
+   ]
   },
   {
    "cell_type": "markdown",
