--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -36,23 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-06-08T21:09:58.810044Z",
      "start_time": "2018-06-08T21:08:58.850Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda/envs/py35/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os \n",
     "import pandas as pd\n",
@@ -71,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-06-08T21:03:43.036724Z",
@@ -837,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-06-08T21:04:11.434007Z",
@@ -858,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-06-08T21:04:22.815668Z",
@@ -879,14 +870,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-06-08T21:04:33.533889Z",
      "start_time": "2018-06-08T21:04:29.035081Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/envs/py35/lib/python3.5/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n",
+      "/anaconda/envs/py35/lib/python3.5/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  after removing the cwd from sys.path.\n",
+      "/anaconda/envs/py35/lib/python3.5/site-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"\n",
+      "/anaconda/envs/py35/lib/python3.5/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n",
+      "/anaconda/envs/py35/lib/python3.5/site-packages/ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  import sys\n",
+      "/anaconda/envs/py35/lib/python3.5/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "def add_dates(data_frame):\n",
     "    date = pd.to_datetime(data_frame['unix_time'], unit='s')\n",
@@ -918,12 +952,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_temp_time_dict(data_frame):\n",
-    "    base_http = 'https://api.darksky.net/forecast/00168b91b5fdeb9c6e1c91b0a0b5da9f/39.833851,-74.871826,'\n",
+    "    base_http = 'https://api.darksky.net/forecast/a6861bbd8dfb09d9f06714ba8485934f/39.833851,-74.871826,'\n",
     "    temp_time_dict = {}\n",
     "    \n",
     "    count=0\n",
@@ -935,31 +969,20 @@
     "            r = requests.get(base_http + str(current_timestamp))\n",
     "            temp_json = r.json()\n",
     "            temp_time_dict[current_timestamp] = temp_json\n",
-    "    \n",
-    "#     with open('temperature_data.json', 'w') as outfile:\n",
-    "#         json.dump(temp_time_dict, outfile)\n",
     "        \n",
-    "    return temp_time_dict"
+    "    with open('temperature_data.json', 'w') as outfile:\n",
+    "        json.dump(temp_time_dict, outfile)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_data = create_temp_time_dict(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# json_data = None\n",
-    "# with open('temperature_data.json') as f:\n",
-    "#     json_data = json.load(f)"
+    "json_data = None\n",
+    "with open('temperature_data.json') as f:\n",
+    "    json_data = json.load(f)"
    ]
   },
   {
@@ -972,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-06-08T21:19:48.355461Z",
@@ -987,9 +1010,9 @@
     "    #format for API\n",
     "    current_timestamp = int(time.mktime(date_obj.timetuple())) + 4 * 60 * 60\n",
     "    \n",
-    "    temperature_info = json_data[current_timestamp]['hourly']['data'][row['hour']]['temperature']\n",
-    "    sunrise = json_data[current_timestamp]['daily']['data'][0]['sunriseTime'] #in GMT \n",
-    "    sunset = json_data[current_timestamp]['daily']['data'][0]['sunsetTime']\n",
+    "    temperature_info = json_data[str(current_timestamp)]['hourly']['data'][row['hour']]['temperature']\n",
+    "    sunrise = json_data[str(current_timestamp)]['daily']['data'][0]['sunriseTime'] #in GMT \n",
+    "    sunset = json_data[str(current_timestamp)]['daily']['data'][0]['sunsetTime']\n",
     "    current_timestamp_with_seconds = current_timestamp + (row['hour'] * 60 * 60) + (row['minute'] * 60)\n",
     "\n",
     "    is_sun_up = 1 if sunrise <= current_timestamp_with_seconds <= sunset else 0\n",
@@ -998,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-06-08T21:19:51.682361Z",
@@ -1012,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1075,7 @@
     "\n",
     "categorical_df = df.copy()\n",
     "# to encode the df we need to encode the NaNs as strings\n",
-    "categorical_df = categorical_df.fillna({'regression_value_type':'nan', 'event': 'nan', 'value':0})\n",
+    "categorical_df = categorical_df.fillna({'regression_value_type':'nan', 'event': 'nan', 'value': 0})\n",
     "categorical_df, label_encoders = encode_columns(categorical_df, columns_to_update)"
    ]
   },
@@ -1070,6 +1093,55 @@
    "metadata": {},
    "source": [
     "### One-hot encode columns\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "starting with binary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_hot_encode_col(data_frame, col_name):\n",
+    "    one_hot_encoded = pd.get_dummies(data_frame[col_name], prefix=col_name)\n",
+    "    return one_hot_encoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_df = df.copy()\n",
+    "binary_df = binary_df.drop('regression_value_type', axis=1)\n",
+    "binary_df = binary_df.drop('value', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_encoded = one_hot_encode_col(binary_df, 'event')\n",
+    "binary_df = pd.concat([binary_df, event_encoded], axis=1)\n",
+    "binary_df = binary_df.drop('event', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_df.to_hdf('./checkpoints/data_binary_encoded.h5', 'table', mode='w', append=True, complevel=9, complib='zlib', index=False)"
    ]
   },
   {
