--- a/train_rnn.ipynb
+++ b/train_rnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,10 @@
     "from numpy import nan\n",
     "import requests\n",
     "import os.path\n",
+    "from sklearn import preprocessing\n",
+    "\n",
     "pd.set_option('display.max_columns', 500)\n",
-    "pd.set_option('display.max_rows', 500)\n"
+    "pd.set_option('display.max_rows', 500)"
    ]
   },
   {
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,31 +40,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = get_test_data()"
+    "def normalize_data(float_data):\n",
+    "    mean = float_data.mean(axis=0)\n",
+    "    float_data -= mean\n",
+    "    std = float_data.std(axis=0)\n",
+    "    float_data /= std\n",
+    "    return float_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.shape[-1]"
+    "data = get_test_data()\n",
+    "data = normalize_data(data)"
    ]
   },
   {
@@ -74,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,9 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Flatten"
@@ -177,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,6 +191,17 @@
     "    model.add(Flatten(input_shape=(lookback // step, float_data.shape[-1])))\n",
     "    model.add(Dense(32), activation='relu')\n",
     "    model.add(Dense(len(float_data.shape[-1])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model():\n",
+    "    float_data = get_test_data()\n",
+    "    "
    ]
   }
  ],
